[metadata]
name = azure-databricks-api
author = Erik Zwiefel
author-email = erikzw@outlook.com
maintainer = Erik Zwiefel
maintainer-email = erikzw@outlook.com
summary = A wrapper for the Azure Databricks REST API
description-file = README.md
home-page = http://github.com/ezwiefel/azure_databricks_api
license = MIT
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
keywords =
    azure
    databricks

[files]
packages =
    azure-databricks-api

