[metadata]
name = azure-databricks-api
author = Erik Zwiefel
author-email = erikzw@outlook.com
maintainer = Erik Zwiefel
maintainer-email = erikzw@outlook.com

summary = A wrapper for the Azure Databricks REST API
description-file = README.md
home-page = http://github.com/ezwiefel/azure-databricks-api

license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

keywords =
    azure
    databricks

[files]
packages =
    azure_databricks_api

